[package]
name = "bigint_test"
version = "0.1.0"
authors = ["Hubert A. Le Van Gong <hubert-levangong@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.3"
num-traits = "0.2.8"